--- a/src/app/pages/user-management/retailer/import-access-cashier-dialog/import-access-cashier-dialog.component.html
+++ b/src/app/pages/user-management/retailer/import-access-cashier-dialog/import-access-cashier-dialog.component.html
@@ -44,10 +44,10 @@
         <tbody>
           <tr *ngFor="let item of rows">
             <td nowrap>
-              {{ item.kode_isms }}
+              {{ item.code }}
             </td>
             <td nowrap>
-              {{ item.akses_kasir }}
+              {{ item.cashier }}
             </td>
           </tr>
           <tr *ngIf="rows.length === 0">
