change file format to xlsx for import access cashier

--- a/src/app/pages/user-management/retailer/import-access-cashier-dialog/import-access-cashier-dialog.component.html
+++ b/src/app/pages/user-management/retailer/import-access-cashier-dialog/import-access-cashier-dialog.component.html
@@ -5,7 +5,7 @@
     <div fxFlex fxLayout="row" fxLayoutAlign="space-between center">
 
       <div fxFlex fxLayout="row" fxLayoutAlign="start center">
-        <span>Unggah File XLS</span>
+        <span>Unggah File XLSX</span>
       </div>
 
     </div>
