--- a/src/app/pages/dte/template/create/template-create.component.scss
+++ b/src/app/pages/dte/template/create/template-create.component.scss
@@ -43,6 +43,16 @@
       }
     }
 
+    .example-radio-group {
+      display: flex;
+      flex-direction: column;
+      margin: 15px 0;
+    }
+    
+    .example-radio-button {
+      margin: 5px;
+    }
+
     .titletextareaInput {
       -webkit-box-flex: 1;
       box-flex: 1;
