--- a/src/app/pages/inapp-marketing/banner/edit/banner-edit.component.scss
+++ b/src/app/pages/inapp-marketing/banner/edit/banner-edit.component.scss
@@ -1,4 +1,9 @@
 :host {
+  .wilayah {
+    background: #3a3a3a;
+    color: white;
+    padding: 0 24px;
+  }
   .banner-image-template {
     height: 210px;
     width: 410px;
