fix styling banner targeted audience

--- a/src/app/pages/inapp-marketing/banner/edit/banner-edit.component.html
+++ b/src/app/pages/inapp-marketing/banner/edit/banner-edit.component.html
@@ -515,7 +515,8 @@
             <div class="" formArrayName="areas"
               *ngFor="let wil of formBannerGroup.get('areas')['controls']; let i = index;">
               <div [formGroupName]="i">
-                <div class="mb-16 wilayah" fxLayout="row" fxLayoutAlign="space-between center">
+                <div class="mb-16" style="background: #3a3a3a;color: white;padding: 0 24px;" fxLayout="row"
+                  fxLayoutAlign="space-between center">
                   <div fxFlex="50">
                     <h3 class="">&nbsp;</h3>
                   </div>
