--- a/src/app/pages/inapp-marketing/banner/import-audience-banner-dialog/import-audience-banner-dialog.component.html
+++ b/src/app/pages/inapp-marketing/banner/import-audience-banner-dialog/import-audience-banner-dialog.component.html
@@ -76,7 +76,7 @@
       <div fxFlexLayout="row" fxLayoutAlign="start center" fxLayout.lt-md="row" fxLayoutGap="20px"
         fxLayoutGap.lt-md="10px" fxFlex="1 0 auto">
         <button type="button" mat-raised-button color="primary" (click)="submit()"
-          [disabled]="rows.length === 0">Kirim</button>
+          [disabled]="rows.length === 0 || !validData">Kirim</button>
         <button type="button" mat-stroked-button color="primary" (click)="dialogRef.close()"
           [disabled]="uploading">Batal</button>
       </div>
